minor fix of scroll and text align

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .question-title p {
